# object_identification

./: CMakeLists.txt  README.md  package.xml
cfg/: object_identification.cfg  ssh_object_identification.cfg
cmake/: FindQGLViewer.cmake
config/: conf.rviz  ssh.rviz  ssh_project.rviz
include/: objectIdentifier.h  viewer.h
launch/: ssh_object_identification.launch  ssh_project.launch
src/: main.cpp  objectIdentifier.cpp  viewer.cpp
